@@ -30,6 +30,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 
 import eu.solven.adhoc.beta.schema.CoordinatesSample;
@@ -107,7 +108,7 @@ public class ManyToMany1DDecomposition implements IDecomposition {
 		Optional<?> optInput = slice.getSlice().optGroupBy(elementColumn);
 		if (optInput.isEmpty()) {
 			// There is no expressed element
-			return List.of(IDecompositionEntry.of(Map.of(), value));
+			return ImmutableList.of(IDecompositionEntry.of(Map.of(), value));
 		}
 
 		Object element = optInput.get();
@@ -154,7 +155,7 @@ public class ManyToMany1DDecomposition implements IDecomposition {
 					.toList();
 		} else {
 			// A single contribution for the filtered groups
-			return List.of(IDecompositionEntry.of(Map.of(), scale(groups, value)));
+			return ImmutableList.of(IDecompositionEntry.of(Map.of(), scale(groups, value)));
 		}
 	}
 
